Fix AccessibilityMenu overflow styles

--- a/src/domain/header/_accessibilityMenu.scss
+++ b/src/domain/header/_accessibilityMenu.scss
@@ -1,6 +1,7 @@
 .app-AccessibilityMenu {
     padding: 15px 30px;
     width: 420px;
+    overflow: scroll;
     max-height: 70vh;
     
     &__btn-wrapper {
